# YandexTrackerMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.stack.yml  docker-compose.yml  pyproject.toml
scripts/: oauth_url.py
src/yandex_tracker_mcp/: __init__.py  config.py  pipeline.py  scheduler.py  server.py  tracker.py
tests/: test_pipeline.py  test_scheduler.py  test_tracker.py
